# irdl-backend

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py  start_server.sh
irdl/: settings.py
irdl/aws/: resource.py  resource_local.py
irdl/db/: __init__.py  dynamodb.py  rdb.py
irdl/models/pynamodb/: __init__.py  camera_image.py  location.py  object_detection.py  sensor.py
irdl/repositories/dynamodb/: __init__.py  base.py  camera_image.py  location.py
irdl/repositories/storage/: base.py
irdl/repositories/storage/s3/: __init__.py  camera_image.py  camera_image_file.py  s3.py
irdl/schemas/: __init__.py  camera_image.py  device.py  location.py  sensor.py
irdl/server/: server.py
irdl/server/api/: api.py
irdl/server/api/routes/: device_management.py  location.py  (+1 more)
irdl/services/device_management/: __init__.py  device.py  organization.py
irdl/services/job/: requests.py
irdl/services/remote_command/: __init__.py  publisher.py  remote_command.py  subscriber.py
irdl/utils/: config.py  dynamodb.py  image.py  logger.py
lambda/object_detection/: README.md  serverless.yaml
tests/: location_table.py  remote_command_take_picture.py
tests/device_management/: create_device.py  create_organization.py  delete_organization.py  get_device_list.py  register_organization.py
tests/models/pynamodb/: create_location_table.py  object_detection.py
tests/remote_command/: beep.py  get_status.py  start_location_logging.py  start_sensor_logging.py  stop_location_logging.py  stop_sensor_logging.py  subscribe.py  take_picture.py
tests/repositories/: location.py
(+3 files in other folders)
